@@ -464,7 +464,7 @@ public class Generator {
                                            Module module) {
         List<Type> memberTypes = new ArrayList<>();
         memberTypes.addAll(typeDescriptor.memberTypeDesc().stream().map(type ->
-                Type.fromNode(type, semanticModel, module)).collect(Collectors.toList()));
+                Type.fromNode(type, semanticModel, module)).toList());
         BType bType = new BType(tupleTypeName, getDocFromMetadata(optionalMetadataNode),
                 getDescSectionsDocFromMetaDataList(optionalMetadataNode), isDeprecated(optionalMetadataNode),
                 memberTypes);
@@ -815,8 +815,8 @@ public class Generator {
                 if (!originType.isPublic) {
                     variables.addAll(originType.memberTypes.stream()
                             .map(type -> new DefaultableVariable(type.name, type.description, false,
-                                    type.elementType, "")).collect(Collectors.toList()));
-                } else if (originType.memberTypes.size() > 0) {
+                                    type.elementType, "")).toList());
+                } else if (!originType.memberTypes.isEmpty()) {
                     variables.add(new DefaultableVariable(originType));
                 }
             } else if (node instanceof ObjectFieldNode) {
